fix some nexus setup steps + replace artifactory with nexus everywhere is needed